crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__simple_function_with_params.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: function_with_params.cm
============================================================
Source code:
//!ASSERT FUNCTION_COUNT: 1
//!ASSERT BLOCK_COUNT(add): 1
//!ASSERT CONTAINS: Add

// Tests that function parameters are correctly allocated on the stack, loaded, and used.
func add(a: felt, b: felt) -> felt {
    return a + b;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn add {
    parameters: [0, 2]
    entry: 0

    0:
      %1 = stackalloc 1
      store %1, %0
      %3 = stackalloc 1
      store %3, %2
      %4 = load %1
      %5 = load %3
      %6 = %4 Add %5
      return %6

  }

}
