crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__variables_reassignment_from_var.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: reassignment_from_var.cm
============================================================
Source code:
// Tests reassigning one variable with the value of another.
fn test_reassignment() -> felt {
    let x = 10;
    let y = 20;
    x = y; // Should generate a load from y's address and a store to x's address.
    return x;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_reassignment {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 10
      %1 = stackalloc 1
      store %1, 20
      store %0, %1
      return %0

  }

}
